--- a/web/index.html
+++ b/web/index.html
@@ -55,23 +55,23 @@
         !-->
 
       </div>
-      <br>
-
+          <form action="index.html">
+            <br>
+            <input name="from_date" id="from_date" type="date" >
+            <input name="to_date" id="to_date" type="date" >
+            <input type="submit" value="Find Reports">
+          </form>  
       <!-- Jumbotron 
       <h3 >Lobbyin Search</h3>
 
       <div class="jumbotron">
         <h1>Find Lobbying Reports</h1>
         <div class="lead">
-          <form action="index.html">
-            <br>
-            <input class="form-control input-lg" name="q" placeholder="Search for address, owner name, or parcel ID">
-            <h3></h3>
-            <input class="btn btn-lg btn-success" type="submit" value="Find Reports">
-          </form>  
         </div>
       </div>
       !-->
+
+
         <br></br>
         <table id="t1" class="table table-striped table-bordered" cellspacing="0" width="100%"></table>
 
@@ -102,6 +102,7 @@
     </div> <!-- /container -->
 
     <script>
+
     function formatDollar(num) {
     var p = num.toFixed(2).split(".");
     return "$" + p[0].split("").reverse().reduce(function(acc, num, i, orig) {
@@ -123,24 +124,39 @@
         });
         return result;
     }
+
     var q = parse('q');
     var parcel_id = parse('parcel_id')
     var physical_address = parse('physical_address')
     var owner_name = parse('owner_name')
+    var begin= parse('from_date')
+    var end=parse('to_date')
+    console.log(begin)
     console.log(q)
 
     $.ajaxSetup({ cache: true });
     var url = "https://datahub.io/api/action/datastore_search_sql?sql=SELECT * FROM\""
 	  var resource_id="117b2e40-5361-49ac-819f-01e12a371632"
-    var begin= "2016-12-08"
-    var end="2016-12-13"
-    if (q) {
+
+    if (begin) {
         //url+=resource_id+"&sort=FILING_ID desc&q="+q+"&callback=?"
         url+=resource_id+"\""
         url+= " WHERE \"FILING_DATE\" between \'" + begin + "\' AND \'" + end +"\'"
         url+=" ORDER BY \"FILING_DATE\" DESC , \"AMOUNT_A\" DESC"
         //+"&sort=FILING_DATE desc,FILER_NAML, AMOUNT_A desc&limit=200&callback=?"
     }else{
+        var today=new Date()
+        var last_week=new Date()
+        last_week.setDate(today.getDate() - 7);
+
+        document.getElementById("from_date").valueAsDate = last_week
+        document.getElementById("to_date").valueAsDate = today
+        begin=document.getElementById("from_date").value
+        end=document.getElementById("to_date").value
+        url+=resource_id+"\""
+        url+= " WHERE \"FILING_DATE\" between \'" + begin + "\' AND \'" + end +"\'"
+        url+=" ORDER BY \"FILING_DATE\" DESC , \"AMOUNT_A\" DESC"
+        /*
         if (parcel_id){
         url+=resource_id+"&q={\"PARCEL_ID\":\""+parcel_id+"\"}&callback=?"
         }
@@ -150,6 +166,7 @@
         if (owner_name){
         url+=resource_id+"&q={\"OWN_NAME\":\""+owner_name+"\"}&callback=?"  
         }
+        */
     console.log(url)
     }
     $.getJSON(url,
@@ -199,7 +216,6 @@
               "order": [[ 1, 'des' ],[3,'des']]
             });
         } );
-
     });
 
     </script>
